--- a/andrew-kris/index.html
+++ b/andrew-kris/index.html
@@ -5,10 +5,10 @@
   <title>Lab 2</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="vendor/styles/normalize.css">
-  <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="vendor/styles/base.css">
   <link rel="stylesheet" href="vendor/styles/icons.css">
-  <link rel="stylesheet" href="styles/layout.css">
-  <link rel="stylesheet" href="styles/modules.css">
+  <link rel="stylesheet" href="vendor/styles/layout.css">
+  <link rel="stylesheet" href="vendor/styles/modules.css">
   <link rel="icon" type="image/x-icon" href="https://avatars2.githubusercontent.com/u/18607604?v=3&s=200">
 </head>
 <body>
@@ -49,8 +49,8 @@
     &copy; 2018 Code Fellows | Static Blog | Happy Ipsum!
   </footer>
 <!-- // TODO: Include any/all needed script tags -->
-<script src = "scripts/article.js"></script>
+<script src = "https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
 <script src = "scripts/blogArticles.js"></script>
-
+<script src = "scripts/article.js"></script>
 </body>
 </html>
